--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 técnicas con estrategias de optimización, creación de contenido atractivo y conocimientos en marketing digital para 
                 ayudarte a alcanzar tus metas en línea. </p>
             <p>Permíteme potenciar tu presencia digital de manera efectiva y creativa</p>
-            <a href="download/Julian_Obando_-_.pdf" download="CV Julian Obando ">Descargar CV</a>
+            <a href="download/CV.pdf" download="CV Julian Obando ">Descargar CV</a>
         </div>
     </section>
 
@@ -263,7 +263,6 @@
             <a href="#"><img src="images/icon_twitter.png" alt=""></a>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
-</html>^qCY8d%s7CxcH%^C
+</html>
