--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <h1>/OJO/</h1>
                     <nav id="nav" class="">
                         <ul id="links">
-                            <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">INICIO</a></li>
-                            <li><a href="#sobremi" onclick="seleccionar(this)">SOBRE MI</a></li>
-                            <li><a href="#servicios" onclick="seleccionar(this)">SERVICIOS</a></li>
-                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTAFOLIO</a></li>
-                            <li><a href="#contacto" onclick="seleccionar(this)">CONTACTO</a></li>
+                            <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">START</a></li>
+                            <li><a href="#sobremi" onclick="seleccionar(this)">ABOUT ME</a></li>
+                            <li><a href="#servicios" onclick="seleccionar(this)">SERVICES</a></li>
+                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
+                            <li><a href="#contacto" onclick="seleccionar(this)">CONTACT</a></li>
                         </ul>
                     </nav>
 
@@ -44,10 +44,10 @@
                 </div>
             </header>
             <div class="presentacion">
-                <p class="bienvenida">Bienvenidos</p>
-                <h2>Soy <span>Oscar Julian Obando</span>, desarrollador web, especialista en SEO y marketing digital</h2> 
+                <p class="bienvenida">Welcome</p>
+                <h2>I'm <span>Oscar Julian Obando</span>, web developer and SEO specialist</h2> 
                 
-                    <a href="#portfolio">Ir a Portafolio</a>               
+                    <a href="#portfolio">Go to Portfolio</a>               
             </div>
         </div>
     </section>
@@ -58,14 +58,11 @@
             <img src="images/unnamed.png" alt="">
         </div>
         <div class="sobremi">
-            <p class="titulo-seccion">Sobre mi</p>
-            <h2>Hola, soy <span>Oscar Julian Obando</span></h2>
-            <h3>Desarrollador Web</h3>
-            <p>Soy un desarrollador web, especialista en SEO, coordinador de contenido y experto en marketing. Combino habilidades 
-                técnicas con estrategias de optimización, creación de contenido atractivo y conocimientos en marketing digital para 
-                ayudarte a alcanzar tus metas en línea. </p>
-            <p>Permíteme potenciar tu presencia digital de manera efectiva y creativa</p>
-            <a href="download/CV.pdf" download="CV Julian Obando ">Descargar CV</a>
+            <p class="titulo-seccion">About me</p>
+            <h2>Hi, I'm <span>Oscar Julian Obando</span></h2>
+            <h3>Web Developer</h3>
+            <p>I am a web developer specializing in SEO. I combine technical skills with optimization strategies to help you achieve your online goals. I have over 4 years of experience as a WordPress web developer, creating websites for more than 10 different work sectors. </p>
+
         </div>
     </section>
 
