--- a/index.html
+++ b/index.html
@@ -22,19 +22,16 @@
                         <ul id="links">
                             <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">START</a></li>
                             <li><a href="#sobremi" onclick="seleccionar(this)">ABOUT ME</a></li>
-                            <li><a href="#servicios" onclick="seleccionar(this)">SERVICES</a></li>
                             <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
                             <li><a href="#contacto" onclick="seleccionar(this)">CONTACT</a></li>
                         </ul>
                     </nav>
 
-                    <!--Iconos del menu responsive-->
 
                     <div id="icono-nav" onclick="responsiveMenu()">
                         <img src="images/icon_bar-menu.png" alt="">
                     </div>
 
-                    <!--Iconos de las redes sociales-->
 
                     <div class="redes">
                         <a href="#"><img src="images/icon_facebook.png" alt=""></a>
@@ -68,14 +65,14 @@
 
     <!-- Portfolio section-->
     <section id="portfolio">
-        <h3 class="titulo-seccion">MIS PROYECTOS</h3>
+        <h3 class="titulo-seccion">WORK EXPERIENCE</h3>
         <div class="fila">
-            <a href="https://hotelsantanafusa.000webhostapp.com"><div class="proyecto">
+            <a href="https://visitbrookhavenms.com/"><div class="proyecto">
                 <div class="overlay"></div>
                 <img src="images/bg_hotelsantana.png" alt="">
                 <div class="info">
-                    <h4>Hotel Santana Fusa</h4>
-                    <p>Diseño web y marketing</p>
+                    <h4>Visit Brookhaven</h4>
+                    <p>Web and Plugin development</p>
                 </div>
             </div></a>
             <a href="https://candlewic.com"><div class="proyecto">
