--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p>Theme and Web development</p>
                 </div>
             </div></a>
-            <a href="https://new.kitanano.ch"><div class="proyecto">
+            <a href="https://kitanano.ch"><div class="proyecto">
                 <div class="overlay"></div>
                 <img src="images/bg_kitanano.png" alt="">
                 <div class="info">
